--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,7 @@ dependencies {
 
     //ktx
     implementation 'androidx.room:room-ktx:2.5.1'
+
+    //material
+    implementation 'com.google.android.material:material:1.8.0'
 }
