--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    //jsoup
     implementation 'org.jsoup:jsoup:1.13.1'
-    implementation 'androidx.fragment:fragment-ktx:1.5.6'
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.15.1'
@@ -70,6 +70,7 @@ dependencies {
 
     //ktx
     implementation 'androidx.room:room-ktx:2.5.1'
+    implementation 'androidx.fragment:fragment-ktx:1.5.6'
 
     //material
     implementation 'com.google.android.material:material:1.8.0'
